--- a/package.json
+++ b/package.json
@@ -9,27 +9,19 @@
 		"test": "npm run test:integration && npm run test:unit",
 		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
-		"lint": "prettier --check . && eslint .",
-		"format": "prettier --write .",
+		"lint": "biome lint .",
+		"format": "biome format .",
 		"test:integration": "playwright test",
 		"test:unit": "vitest"
 	},
 	"devDependencies": {
+		"@biomejs/biome": "^2.0.6",
 		"@playwright/test": "^1.44.1",
 		"@sveltejs/adapter-node": "^5.0.1",
 		"@sveltejs/kit": "^2.5.10",
 		"@sveltejs/vite-plugin-svelte": "^3.1.1",
-		"@types/eslint": "^8.56.10",
-		"@typescript-eslint/eslint-plugin": "^7.11.0",
-		"@typescript-eslint/parser": "^7.11.0",
 		"autoprefixer": "^10.4.19",
-		"eslint": "^8.57.0",
-		"eslint-config-prettier": "^9.1.0",
-		"eslint-plugin-svelte": "^2.39.0",
 		"postcss": "^8.4.38",
-		"prettier": "^3.3.0",
-		"prettier-plugin-svelte": "^3.2.3",
-		"prettier-plugin-tailwindcss": "^0.5.14",
 		"svelte": "5.0.0-next.148",
 		"svelte-check": "^3.8.0",
 		"tailwindcss": "^3.4.3",
