--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "svelte-5-kit-boilerplate",
+	"name": "@raizora/munaqadh",
 	"version": "0.0.1",
 	"private": true,
 	"scripts": {
@@ -24,7 +24,7 @@
 		"postcss": "^8.4.38",
 		"svelte": "5.0.0-next.148",
 		"svelte-check": "^3.8.0",
-		"tailwindcss": "^3.4.3",
+		"tailwindcss": "^4.1.11",
 		"tslib": "^2.6.2",
 		"typescript": "^5.4.5",
 		"vite": "^5.2.12",
@@ -32,6 +32,7 @@
 	},
 	"type": "module",
 	"dependencies": {
+		"@tailwindcss/postcss": "^4.1.11",
 		"clsx": "^2.1.1",
 		"dotenv": "^16.4.5",
 		"lucide-svelte": "^0.377.0",
