--- a/frontend-astro/package.json
+++ b/frontend-astro/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "wayne-law",
+  "name": "@treonstudio/munaqadh",
   "type": "module",
   "version": "0.0.1",
   "private": true,
@@ -14,6 +14,7 @@
     "@astrojs/react": "^4.3.0",
     "@astrojs/sitemap": "^3.4.1",
     "@astrolib/seo": "^1.0.0-beta.8",
+    "@propelauth/node": "^2.1.33",
     "@radix-ui/react-accordion": "^1.2.11",
     "@radix-ui/react-alert-dialog": "^1.1.14",
     "@radix-ui/react-avatar": "^1.1.10",
@@ -34,6 +35,7 @@
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-switch": "^1.2.5",
     "@radix-ui/react-tabs": "^1.1.12",
+    "@t3-oss/env-core": "^0.13.8",
     "@tailwindcss/forms": "^0.5.10",
     "@tailwindcss/typography": "^0.5.16",
     "@types/react": "^19.1.8",
@@ -41,17 +43,20 @@
     "astro": "^5.9.3",
     "class-variance-authority": "^0.7.1",
     "cmdk": "^1.1.1",
+    "drizzle-kit": "^0.31.4",
     "embla-carousel-react": "^8.6.0",
     "input-otp": "^1.4.2",
     "lodash": "^4.17.21",
     "lucide-react": "^0.536.0",
     "motion": "^12.23.12",
+    "posthog-node": "^5.6.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-resizable-panels": "^3.0.4",
     "recharts": "^3.1.0",
     "tailwind-scrollbar-hide": "^4.0.0",
-    "vaul": "^1.1.2"
+    "vaul": "^1.1.2",
+    "zod": "^4.0.14"
   },
   "devDependencies": {
     "@tailwindcss/vite": "^4.1.10",
