--- a/web-astro/package.json
+++ b/web-astro/package.json
@@ -15,6 +15,7 @@
     "@astrojs/sitemap": "^3.4.1",
     "@astrolib/seo": "^1.0.0-beta.8",
     "@propelauth/node": "^2.1.33",
+    "@propelauth/react": "^4.0.0",
     "@radix-ui/react-accordion": "^1.2.11",
     "@radix-ui/react-alert-dialog": "^1.1.14",
     "@radix-ui/react-avatar": "^1.1.10",
